--- a/q1.ipynb
+++ b/q1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
     "import random\n",
     "import game\n",
     "account = 'ayakain5rolls'\n",
-    "quiz = 1\n",
+    "quiz = 4\n",
     "\n",
     "client = game.Client(account, quiz)\n",
     "# Code chi choi 1 game.\n",
@@ -49,6 +49,23 @@
     "        # Tro choi da ket thuc\n",
     "        print(\"Session ended\")\n",
     "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(game.MOVES[0])"
    ]
   }
  ],
